@@ -19,7 +19,7 @@ import gtk
 from sugar.graphics.icon import Icon
 
 class MenuItem(gtk.ImageMenuItem):
-    def __init__(self, text_label, icon_name=None):
+    def __init__(self, text_label=None, icon_name=None):
         gtk.ImageMenuItem.__init__(self, text_label)
         if icon_name:
             icon = Icon(icon_name=icon_name, icon_size=gtk.ICON_SIZE_MENU)
