@@ -1,3 +1,4 @@
+* Display meshbox invite palette menu with colored activity icon #4624
 * Always checkin to the DS from a new file. (tomeu)
 
 Snapshot c682a5e241
